spock-specs/src/test/resources/snapshots/org/spockframework/smoke/parameterization/InvalidWhereBlocks/using_combined_label_between_data_pipe_and_derived_data_variable_is_not_allowed.txt
Unable to produce AST for this phase due to earlier compilation error:
startup failed:
script.groovy: 7: Derived data variables cannot be combined @ line 7, column 7.
         b = 1
         ^

1 error